<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!-- 头布局 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/sanwen"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/mine_name"
                            android:textStyle="bold"
                            android:textSize="22sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mine_introduce"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8">

                        <Button
                            android:id="@+id/mine_btn_login"
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:background="@color/app_green"
                            android:layout_marginLeft="20dp"
                            android:text="登录"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                </LinearLayout>

                <!-- 间隔 -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/bg_app"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btn_my_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:src="@drawable/tushu"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="我的代金券"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </LinearLayout>

                <!--间隔-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/bg_app"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="24dp"
                            android:src="@drawable/tushu"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:text="@string/already_buy"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:textColor="@color/black"/>

                        <RelativeLayout
                            android:id="@+id/btn_buy_more"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="10dp"
                                android:textSize="14sp"
                                android:textColor="@color/app_text"
                                android:text="@string/book_more"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/mine_buy_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_app"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:overScrollMode="never" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>
